[gd_scene format=3 uid="uid://bw4fbt1hanvtw"]

[ext_resource type="Script" uid="uid://dtfietgohox21" path="res://start.gd" id="1_3bxa3"]

[node name="Start" type="Control" unique_id=579261995]
process_mode = 3
layout_mode = 3
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 100.0
offset_top = 100.0
offset_right = -100.0
offset_bottom = -100.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_3bxa3")

[node name="HBoxContainer" type="HBoxContainer" parent="." unique_id=890463944]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="Control" type="Control" parent="HBoxContainer" unique_id=343131248]
layout_mode = 2
size_flags_horizontal = 3

[node name="Shotgun" type="Button" parent="HBoxContainer/Control" unique_id=2091499506]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.167
anchor_top = 0.167
anchor_right = 0.833
anchor_bottom = 0.833
offset_left = -20.0
offset_top = -19.0
offset_right = 20.0
offset_bottom = 21.0
grow_horizontal = 2
grow_vertical = 2
text = "Shotgun"

[node name="Control2" type="Control" parent="HBoxContainer" unique_id=1315549404]
layout_mode = 2
size_flags_horizontal = 3

[node name="Assult Riffle" type="Button" parent="HBoxContainer/Control2" unique_id=1371229962]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.167
anchor_top = 0.167
anchor_right = 0.833
anchor_bottom = 0.833
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
text = "Assult Riffle"

[node name="Control3" type="Control" parent="HBoxContainer" unique_id=1717639624]
layout_mode = 2
size_flags_horizontal = 3

[node name="Sniper" type="Button" parent="HBoxContainer/Control3" unique_id=1532349003]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.167
anchor_top = 0.167
anchor_right = 0.833
anchor_bottom = 0.833
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
text = "Sniper"

[connection signal="pressed" from="HBoxContainer/Control/Shotgun" to="." method="_on_shotgun_pressed"]
[connection signal="pressed" from="HBoxContainer/Control2/Assult Riffle" to="." method="_on_assult_riffle_pressed"]
[connection signal="pressed" from="HBoxContainer/Control3/Sniper" to="." method="_on_sniper_pressed"]
